--- a/app/views/kids/new.html.erb
+++ b/app/views/kids/new.html.erb
@@ -1,14 +1,12 @@
-<div class="container">
-  <div class="row">
-    <div class="col-sm-4 col-sm-offset-4">
+<div class='container'>
+  <div class='row'>
+    <div class='col-xs-12 col-sm-6 col-sm-offset-3'>
 
-      <h2>Sign up</h2>
 
-      <%= simple_form_for(@kid, url: kids_path) do |f| %>
-        <%= f.error_notification %>
 
-        <div class="form-inputs">
-          <%= f.input :email,
+      <%= simple_form_for @kid do |f| %>
+
+         <%= f.input :email,
                       required: true,
                       autofocus: true,
                       input_html: { autocomplete: "email" }%>
@@ -19,16 +17,10 @@
           <%= f.input :password_confirmation,
                       required: true,
                       input_html: { autocomplete: "new-password" } %>
-         <!-- CHECK LINE BELOW IS IT NECESSARY FOR THE PROFILE EDIT PAGES -->
-        </div>
 
-        <div class="form-actions">
-          <%= f.button :submit, "Sign up" %>
-        </div>
+        <%= f.submit 'Submit!', class: 'btn btn-primary' %>
       <% end %>
 
-      <%= render "devise/shared/links" %>
     </div>
   </div>
 </div>
-
