--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,3 +12,6 @@
 @import "components/index";
 @import "pages/index";
 @import "components/card";
+@import "components/form";
+@import "components/button";
+@import "pages/home";
