index and show ok

--- a/app/views/drawings/index.html.erb
+++ b/app/views/drawings/index.html.erb
@@ -3,5 +3,9 @@
     <p><%= drawing.image_url %></p>
     <p><%= drawing.upload_at %></p>
     <p><%= drawing.booking_at %></p>
+    <p><%= drawing.created_at %></p>
+    <p><%= drawing.updated_at %></p>
+    <p><%= drawing.status %></p>
+    <p><%= drawing.name %></p>
   </div>
 <% end %>
