--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -24,6 +24,10 @@
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
 
+.container-text {
+  margin-left: 40px;
+  padding: 40px;
+}
 
 
 // DreamCoLab Intro
