migration to change image name, added destroy action, 2 image upload gems

--- a/app/views/drawings/show.html.erb
+++ b/app/views/drawings/show.html.erb
@@ -3,6 +3,11 @@
   <div class="btn btn-flat my-3 w-75">My Drawing:</div>
   <% current_user.drawings.each do |drawing| %>
     <p><%= drawing.name %></p>
+    <p><%= cl_image_tag drawing.image %></p>
+    <p class="card-text">
+      <%= link_to kid_drawing_path(@drawing.kid, @drawing),
+        method: :delete,
+        data: { confirm: "Are you sure?" } do %> <i class="fas fa-trash-alt"></i> <% end %> </p>
   <% end %>
 </div>
 </div>
