--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -4,13 +4,12 @@
   height: 93vh;
   background-size: cover;
   background-position: center;
-  padding: 150px 0;
 }
 
 .banner h1 {
   margin: 0;
   font-family: 'Covered By Your Grace', cursive;
-  color: #f38181;
+  color: #b9e1dc;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   font-size: 60px;
   font-weight: bold;
@@ -19,8 +18,7 @@
 .banner p {
   font-size: 20px;
   font-family: 'Cutive Mono', monospace;
-  color: #fbfbfb;
-  opacity: .7;
+  color: white;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
 
