--- a/app/views/kids/show.html.erb
+++ b/app/views/kids/show.html.erb
@@ -1,14 +1,16 @@
 <div class='container'>
   <div class='row'>
-    <div class='col-xs-12 col-sm-6 col-sm-offset-3'>
-      <h1><%= @kid.first_name %></h2>
-      <h2><%= @kid.city %></h2>
-      <h3><%= @kid.age %></h3>
-      <img src="@kid.avatar" alt="">
-      <p><%= @kid.description %></p>
-      <p><%= @kid.favourite_things %></p>
-      <p><%= @kid.dislikes %></p>
+    <div class='col-md-12 col-sm-offset-3'>
+      <div class="card-product">
+        <img src="@kid.avatar">
+        <div class="card-product-infos">
+          <h2><%= @kid.first_name %></h2>
+          <p><strong>City:</strong>  <%= @kid.city %> <strong>Age:</strong> <%= @kid.age %></p>
+          <p><strong>Introduction: </strong> <%= @kid.description %></p>
+          <p><strong>Favorite things: </strong> <%= @kid.favourite_things %></p>
+          <p><strong>Dislikes:</strong> <%= @kid.dislikes %></p>
+        </div>
+      </div>
     </div>
   </div>
 </div>
-
