--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,7 +2,7 @@
   <div class="footer-links">
     <a href="#"><i class="fab fa-instagram"></i></a>
     <a href="#"><i class="fab fa-facebook"></i></a>
-    <a href="#"><i class="fab fa-wechat"></i></a>
+    <a href="#"><i class="fab fa-weixin"></i></a>
   </div>
   <div class="footer-copyright">
     This site is made with <i class="fas fa-heart"></i>
