--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
 <div class="banner d-flex " style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://blogs.rch.org.au/news/files/2013/03/00067006-leadimage.jpg);">
   <div class="container-text">
     <h1> dreamCo Lab</h1>
-    <p>give back through art</p>
+    <p>keeping hope alive.</p>
   </div>
 </div>
 <!-- DreamCoLab Info -->
