--- a/app/views/drawings/show.html.erb
+++ b/app/views/drawings/show.html.erb
@@ -1,13 +1,12 @@
 <div class="container text-center">
-  <h1>Hi! I'm <%= current_user.age %></h1>
-  <div class="btn btn-flat my-3 w-75">My Drawing:</div>
-  <% current_user.drawings.each do |drawing| %>
-    <p><%= drawing.name %></p>
-    <p><%= cl_image_tag drawing.image %></p>
-    <p class="card-text">
-      <%= link_to kid_drawing_path(@drawing.kid, @drawing),
+  <div class="btn btn-flat my-3 w-75">
+    <h1>My Drawing:</h1>
+  </div>
+  <p><%= @drawing.name %></p>
+  <p><%= cl_image_tag @drawing.image %></p>
+  <p class="card-text">
+    <%= link_to kid_drawing_path(@drawing.kid, @drawing),
         method: :delete,
         data: { confirm: "Are you sure?" } do %> <i class="fas fa-trash-alt"></i> <% end %> </p>
-  <% end %>
 </div>
 </div>
