--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,6 @@
 <!-- Banner Top -->
-
 <div class="banner d-flex flex-column" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://blogs.rch.org.au/news/files/2013/03/00067006-leadimage.jpg);">
-  <div class="container">
+  <div class="container-homepage">
     <h1> dreamCo Lab</h1>
     <p>keeping hope alive.</p>
   </div>
