--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,6 +5,6 @@
     <a href="#"><i class="fab fa-weixin"></i></a>
   </div>
   <div class="footer-copyright">
-    This site is made with <i class="fas fa-heart"></i>
+    dreamCo lab <i class="fas fa-heart"></i>
   </div>
 </div>
