--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+<div class="navbar navbar-expand-sm navbar-light navbar-dreamcolab">
   <%= link_to "#", class: "navbar-brand" do %>
     <p id="logo-name"><%= image_tag "logo.png" %>dreamCo lab</p>
   <% end %>
@@ -15,10 +15,10 @@
           <%= link_to "Dream Gallery", "#", class: "nav-link" %>
         </li>
         <li class="nav-item dropdown">
-          <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <%= image_tag @user.avatar, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <%= link_to "My profile", "#", class: "dropdown-item" %>
-            <%= link_to "Messages", "#", class: "dropdown-item" %>
+            <%= link_to "My Messages", "#", class: "dropdown-item" %>
             <%= link_to "Log out", root_path, class: "dropdown-item" %>
           </div>
         </li>
