--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,8 +9,8 @@
 <div class="card-join-community text-center col-sm-8 offset-sm-2">
   <h3>Join our community.</h3>
   <div class="d-flex justify-content-center col-sm-8 offset-sm-2">
-    <%= link_to "I'm a dreamer", new_kid_path(@kid), class:"button-user" %>
-    <%= link_to "I'm a creator", new_creator_path(@creator), class:"button-user" %>
+    <%= link_to "I'm a dreamer", class:"button-user" %>
+    <%= link_to "I'm a creator", class:"button-user" %>
   </div>
 </div>
 <div class="mission-card col-sm-8 offset-sm-2 text-center">
