--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,4 +1,5 @@
 .footer {
+  width: 100%;
   background: #F4F4F4;
   display: flex;
   align-items: center;
@@ -6,13 +7,15 @@
   height: 100px;
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
+  // position:fixed;
+  // bottom: 0;
 }
 .footer-links {
   display: flex;
   align-items: center;
 }
 .footer-links a {
-  color: #f38181;
+  color: #756c83;
   opacity: 0.5;
   text-decoration: none;
   font-size: 24px;
