--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -7,3 +7,12 @@
     color: #756c83;
   }
 }
+
+.container-drawing h1 {
+  font-family: 'Shadows Into Light', cursive;
+  font-weight: bold;
+  font-size: 50px;
+  color: #756c83;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
