--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar-dreamcolab {
   justify-content: space-between;
-  background-color: transparent;
+  background-color:  #fbfbfb;
   background:rgba(0,0,0,0.2);
   width: 100%;
   color: #b9e1dc;
@@ -23,3 +23,13 @@
 .navbar #navbarSupportedContent .navbar-nav .nav-item .nav-link {
   color: black;
 }
+
+.user-image {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+  border: white 1px solid;
+}
+
+
