--- a/app/views/kids/show.html.erb
+++ b/app/views/kids/show.html.erb
@@ -13,7 +13,7 @@
 </div>
 <!-- My artwork -->
 <div class="my-art-card text-center col-md-6 col-sm-8 offset-sm-2">
-  <h1>My Artwork</h1>
+  <h1>My Drawings</h1>
   <div class="row">
     <div class="image-card col-md-4 col-sm-8">
       <p><%= image_tag 'drawing2.png', class:"image" %></p>
@@ -25,6 +25,7 @@
       <p><%= image_tag 'drawing3.png', class:"image" %></p>
     </div>
   </div>
+  <p><%= link_to "Add a new drawing!", new_kid_drawing_path(@kid) %></p>
 </div>
 <!-- My collabs -->
 <div class="my-art-card text-center col-md-6 col-sm-8 offset-sm-2">
