--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <!-- Banner Top -->
 <div class="banner d-flex flex-column" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://blogs.rch.org.au/news/files/2013/03/00067006-leadimage.jpg);">
   <div class="container-homepage">
-    <h1> dreamCo Lab</h1>
+    <h1 class="mt-3 p-3"> dreamCo Lab</h1>
     <p>keeping hope alive.</p>
   </div>
 </div>
@@ -9,18 +9,18 @@
 <div class="card-join-community text-center col-sm-8 offset-sm-2">
   <h3>Join our community.</h3>
   <div class="d-flex justify-content-center col-sm-8 offset-sm-2">
-    <%= link_to "I'm a dreamer", class:"button-user" %>
-    <%= link_to "I'm a creator", class:"button-user" %>
+    <%= link_to "I'm a dreamer", new_kid_path(@kid), class:"button-user" %>
+    <%= link_to "I'm a creator", new_creator_path(@creator), class:"button-user" %>
   </div>
 </div>
 <div class="mission-card col-sm-8 offset-sm-2 text-center">
   <h1>our mission.</h1>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias voluptates nisi est soluta ipsum harum ab architecto, repellendus inventore exercitationem quam placeat commodi laboriosam. Alias modi quae, vel ad eum!</p>
+  <p>dreamCo lab aims to bring hope, inspiration, and creativity to hospitalized children by connecting them with artists around the world to help bring their dreams to reality. </p>
 </div>
 <!-- Dream Gallery examples -->
 <div class="gallery-card col-sm-8 offset-sm-2 text-center">
   <h1>dream gallery.</h1>
-  <p >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, quo. Rerum laudantium officia iusto blanditiis ea culpa delectus sint ab maxime  dolor, cumque sequi magnam error optio autem numquam porro.</p>
+  <p >Our dream gallery is filled with creations and collaborations between dreamers and creators from all over the world! Take a look at some of our latest works.  </p>
   <div class="row">
     <div class="image-card col-md-6 col-sm-8">
       <p><%= image_tag 'drawing2.png', class:"image" %></p>
