--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,16 +15,16 @@
           <%= link_to "Dream Gallery", "#", class: "nav-link" %>
         </li>
         <li class="nav-item dropdown">
-          <%= image_tag 'childdraw.jpg', class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <%= image_tag 'drawing1.png', class: "user-image", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <%= link_to "My profile", "#", class: "dropdown-item" %>
+            <%= link_to "My profile", kid_path(current_user), class: "dropdown-item" %>
             <%= link_to "My Messages", "#", class: "dropdown-item" %>
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
         </li>
       <% else %>
         <li class="nav-item">
-          <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+          <%= link_to "Login", new_user_session_path, class: "nav-link p-3" %>
         </li>
       <% end %>
     </ul>
