desgin drawing-index

--- a/app/views/drawings/index.html.erb
+++ b/app/views/drawings/index.html.erb
@@ -1,7 +1,13 @@
 <% @drawings.each do |drawing| %>
-  <div class="card">
-    <p><%= drawing.image_url %></p>
-    <p><%= drawing.upload_at %></p>
-    <p><%= drawing.booking_at %></p>
+  <div class="card-trip">
+    <img src="collab1.png">
+    <div class="card-trip-infos">
+      <div>
+        <h2>drawing.name </h2>
+        <p><%= drawing.upload_at %></p>
+      </div>
+      <h2 class="card-trip-pricing">drawing.kid_id</h2>
+      <img src='https://kitt.lewagon.com/placeholder/users/krokro' class="card-trip-user avatar-bordered"/>
+    </div>
   </div>
 <% end %>
