fixed all sign in paths and did design for all forms and profiles

--- a/app/views/kids/edit.html.erb
+++ b/app/views/kids/edit.html.erb
@@ -1,16 +1,18 @@
-<div class='container'>
+<div class='container-edit text-center my-3 p-3'>
+  <h3>Please share a bit about yourself!</h3>
   <div class='row'>
-    <div class='col-xs-12 col-sm-6 col-sm-offset-3'>
+    <div class='edit-kid-card text-center col-sm-8 col-lg-4 offset-lg-4 offset-sm-2 my-3 p-3'>
       <%= simple_form_for @kid do |f| %>
-        <%= f.input :first_name, placeholder: "What's your nickname?" %>
+        <p><%= f.input :first_name, placeholder: "What's your nickname?" %></p>
         <%= f.input :age, placeholder: "How old are you?" %>
-        <%= f.input :avatar, placeholder: "upload your favourite picture" %>
+        <%= f.input :avatar, placeholder: "Upload your favourite picture" %>
+        <%= f.input :avatar_cache, as: :hidden %>
         <%= f.input :city, placeholder: "Which city do you live in?" %>
-        <%= f.input :description, placeholder: "How would you describe yourself?" %>
         <%= f.input :favourite_things, placeholder: "What are your favourite things?" %>
-        <%= f.input :dislikes, placeholder: "What don't you like!?" %>
-        <%= f.submit 'Submit!', class: 'btn btn-primary' %>
-      <% end %>
-    </div>
+        <%= f.input :dislikes, placeholder: "What don't you like?" %>
+        <%= f.input :description, placeholder: "How would you describe yourself?" %>
+        <%= f.submit 'Submit!', class: 'button-register my-3' %>
+      </div>
+    <% end %>
   </div>
 </div>
