--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -7,9 +7,11 @@
   height: 100px;
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
-  // position:fixed;
-  // bottom: 0;
+  bottom: 0;
+  width: 100%;
+
 }
+
 .footer-links {
   display: flex;
   align-items: center;
@@ -27,3 +29,4 @@
 .footer .fa-heart {
   color: #f38181;
 }
+
