--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -4,7 +4,9 @@
   padding: 30px;
   margin-top: 20px;
   h2 {
-    color: #756c83;
+    color: black;
+    font-weight: bold;
+    font-family: 'Cutive Mono', monospace;
   }
 }
 
@@ -15,4 +17,16 @@
   color: #756c83;
   margin-top: 30px;
   margin-bottom: 30px;
+}
+
+label {
+  font-family: 'Shadows Into Light', cursive;
+  font-weight: bold;
+  font-size: 20px;
+  color: #f38181;
+}
+
+.container-edit h3 {
+  font-family: 'Cutive Mono', monospace;
+  color: black;
 }
