--- a/app/views/creators/show.html.erb
+++ b/app/views/creators/show.html.erb
@@ -1,13 +1,27 @@
-<div class='container'>
-  <div class='row'>
-    <div class='col-xs-12 col-sm-6 col-sm-offset-3'>
-      <h1><%= @creator.first_name %></h2>
-      <h1><%= @creator.last_name %></h2>
-      <h2><%= @creator.city %></h2>
-      <h3><%= @creator.age %></h3>
-      <img src="@creator.avatar" alt="">
-      <p><%= @creator.description %></p>
-      <p><%= @creator.portfolio_url %></p>
+<div class='container-profile'>
+  <div class="text-center col-md-6 col-sm-8 offset-sm-2">
+    <%= cl_image_tag @creator.avatar, class:"avatar-bordered w-50 h-50 m-3" %>
+    <h1><%= @creator.first_name %> <%= @creator.last_name %>, <%= @creator.age %></h2>
+    <h2>Location: <%= @creator.city %></h2>
+    <%= link_to "Edit Profile", edit_creator_path(@creator), class:"mb-3" %>
+    <h4>Description: </h4>
+    <p><%= @creator.description %></p>
+    <h4>Portfolio URL </h4>
+    <p><%= @creator.portfolio_url %></p>
+  </div>
+</div>
+<!-- My collabs -->
+<div class="my-art-card text-center col-md-6 col-sm-8 offset-sm-2">
+  <h1>My Collaborations</h1>
+  <div class="row">
+    <div class="image-card col-md-4 col-sm-8">
+      <p><%= image_tag 'collab2.png', class:"image" %></p>
+    </div>
+    <div class="image-card col-md-4 col-sm-8">
+      <p><%= image_tag 'collab4.png', class:"image" %></p>
+    </div>
+    <div class="image-card col-md-4 col-sm-8">
+      <p><%= image_tag 'collab3.png', class:"image" %></p>
     </div>
   </div>
 </div>
