--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,31 @@
-<div class="container">
+<!-- <div class="container">
   <div class="row">
     <div class="col-sm-4 col-sm-offset-4">
 
-      <h2>Sign up</h2>
-
-      <%= simple_form_for(@kid, url: kids_path) do |f| %>
-        <%= f.error_notification %>
-
-        <div class="form-inputs">
-          <%= f.input :email,
+      <h2>Sign up</h2> -->
+<%#= simple_form_for(@kid, url: kids_path) do |f| %>
+  <%#= f.error_notification %>
+  <!-- <div class="form-inputs"> -->
+  <%#= f.input :email,
                       required: true,
                       autofocus: true,
                       input_html: { autocomplete: "email" }%>
-          <%= f.input :password,
+  <%#= f.input :password,
                       required: true,
                       hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
                       input_html: { autocomplete: "new-password" } %>
-          <%= f.input :password_confirmation,
+  <%#= f.input :password_confirmation,
                       required: true,
                       input_html: { autocomplete: "new-password" } %>
-         <!-- CHECK LINE BELOW IS IT NECESSARY FOR THE PROFILE EDIT PAGES -->
+  <!-- CHECK LINE BELOW IS IT NECESSARY FOR THE PROFILE EDIT PAGES
         </div>
 
         <div class="form-actions">
-          <%= f.button :submit, "Sign up" %>
+          <%#= f.button :submit, "Sign up" %>
         </div>
-      <% end %>
+      <%# end %>
 
-      <%= render "devise/shared/links" %>
+      <%#= render "devise/shared/links" %>
     </div>
   </div>
-</div>
-
+</div> -->
