--- a/app/views/kids/show.html.erb
+++ b/app/views/kids/show.html.erb
@@ -1,6 +1,6 @@
 <div class='container-profile'>
   <div class="text-center col-md-6 col-sm-8 offset-sm-2">
-    <%= image_tag @kid.avatar, class:"avatar-bordered w-50 h-50 m-3" %>
+    <%= cl_image_tag @kid.avatar, class:"avatar-bordered w-50 h-50 m-3" %>
     <h1><%= @kid.first_name %>, <%= @kid.age %></h2>
     <h2>Location: <%= @kid.city %></h2>
     <h4>Favourite Things:</h4>
