--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,9 +15,13 @@
           <%= link_to "Dream Gallery", "#", class: "nav-link" %>
         </li>
         <li class="nav-item dropdown">
-          <%= image_tag "childdraw.jpg", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <%= cl_image_tag current_user.avatar, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <%= link_to "My profile", kid_path(current_user), class: "dropdown-item" %>
+            <% if current_user.type == "Kid" %>
+              <%= link_to "My profile", kid_path(current_user), class: "dropdown-item" %>
+            <% else %>
+              <%= link_to "My profile", creator_path(current_user), class: "dropdown-item" %>
+            <% end %>
             <%= link_to "My Messages", "#", class: "dropdown-item" %>
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
