--- a/app/views/drawings/index.html.erb
+++ b/app/views/drawings/index.html.erb
@@ -1,9 +1,11 @@
 <div class="card-trip">
   <% @drawings.each do |drawing| %>
+    <h2><%= drawing.name %></h2>
     <%= cl_image_tag drawing.image %>
+    <%= link_to 'View drawing', kid_drawing_path(drawing.kid, drawing)  %>
     <div class="card-trip-infos">
       <div>
-        <h2><%= drawing.name %></h2>
+
         <p><%= drawing.upload_at %></p>
       </div>
       <h2 class="card-trip-pricing"><%= drawing.kid_id %></h2>
