--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,7 +9,7 @@
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
         <li class="nav-item active">
-          <%= link_to "Home", "#", class: "nav-link" %>
+          <%= link_to "Home", drawings_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to "Dream Gallery", "#", class: "nav-link" %>
