--- a/app/assets/stylesheets/components/_card3.scss
+++ b/app/assets/stylesheets/components/_card3.scss
@@ -2,11 +2,16 @@
   overflow: hidden;
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  margin: 30px auto;
+}
+
+.container img {
+  margin-top: 20px;
 }
 
 .card-trip > img {
-  height: 200px;
-  width: 100%;
+  height: 600px !important;
+  width: 710px !important;
   object-fit: cover;
 }
 
@@ -34,6 +39,6 @@
 .card-trip-infos .card-trip-user {
   position: absolute;
   right: 16px;
-  top: -20px;
+  top: -15px;
   width: 40px;
 }
