--- a/app/views/drawings/index.html.erb
+++ b/app/views/drawings/index.html.erb
@@ -1,13 +1,20 @@
-<div class="card-trip">
+<div class="container">
+  <h1>Drawing List</h1>
   <% @drawings.each do |drawing| %>
-    <%= cl_image_tag drawing.image %>
-    <div class="card-trip-infos">
-      <div>
-        <h2><%= drawing.name %></h2>
-        <p><%= drawing.upload_at %></p>
+    <div class="card-trip col-md-6 col-sm-8 col-lg-8">
+      <%= cl_image_tag drawing.image %>
+      <div class="card-trip-infos">
+        <div>
+          <h2><%= drawing.name %></h2>
+          <p>
+            <%= link_to 'View drawing', kid_drawing_path(drawing.kid, drawing)  %>
+          </p>
+        </div>
+        <h2 class="card-trip-pricing"><%= drawing.kid.first_name %></h2>
+        <div class="card-trip-user avatar-bordered">
+          <%= cl_image_tag drawing.kid.avatar %>
+        </div>
       </div>
-      <h2 class="card-trip-pricing"><%= drawing.kid_id %></h2>
-      <img src='https://kitt.lewagon.com/placeholder/users/krokro' class="card-trip-user avatar-bordered"/>
     </div>
   <% end %>
 </div>
