--- a/app/views/creators/show.html.erb
+++ b/app/views/creators/show.html.erb
@@ -1,5 +1,5 @@
 <div class='container-profile'>
-  <div class="text-center col-md-6 col-sm-8 offset-sm-2">
+  <div class="text-center col-lg-8 offset-lg-2 col-md-6 col-sm-8 offset-sm-2">
     <%= cl_image_tag @creator.avatar, class:"avatar-bordered w-50 h-50 m-3" %>
     <h1><%= @creator.first_name %> <%= @creator.last_name %>, <%= @creator.age %></h2>
     <h2>Location: <%= @creator.city %></h2>
@@ -11,7 +11,7 @@
   </div>
 </div>
 <!-- My collabs -->
-<div class="my-art-card text-center col-md-6 col-sm-8 offset-sm-2">
+<div class="my-art-card text-center col-lg-8 offset-lg-2 col-md-6 col-sm-8 offset-sm-2">
   <h1>My Collaborations</h1>
   <div class="row">
     <div class="image-card col-md-4 col-sm-8">
