--- a/app/views/kids/show.html.erb
+++ b/app/views/kids/show.html.erb
@@ -1,7 +1,7 @@
 <div class='container-profile'>
-  <div class="text-center col-md-6 col-sm-8 offset-sm-2">
+  <div class="text-center col-lg-8 offset-lg-2 col-md-6 col-sm-8 offset-sm-2">
     <%= cl_image_tag @kid.avatar, class:"avatar-bordered w-50 h-50 m-3" %>
-    <h1><%= @kid.first_name %>, <%= @kid.age %></h2>
+    <h1><%= @kid.first_name %>, <%= @kid.age %></h1>
     <%= link_to "Edit Profile", edit_kid_path(@kid), class:"mb-3" %>
     <h2>Location: <%= @kid.city %></h2>
     <h4>Favourite Things:</h4>
@@ -13,7 +13,7 @@
   </div>
 </div>
 <!-- My artwork -->
-<div class="my-art-card text-center col-md-6 col-sm-8 offset-sm-2">
+<div class="my-art-card text-center col-lg-8 offset-lg-2 col-md-6 col-sm-8 offset-sm-2">
   <h1>My Drawings</h1>
   <div class="row">
     <div class="image-card col-md-4 col-sm-8">
@@ -29,7 +29,7 @@
   <p><%= link_to "Add a new drawing!", new_kid_drawing_path(@kid) %></p>
 </div>
 <!-- My collabs -->
-<div class="my-art-card text-center col-md-6 col-sm-8 offset-sm-2">
+<div class="my-art-card text-center col-lg-8 offset-lg-2 col-md-6 col-sm-8 offset-sm-2">
   <h1>My Collaborations</h1>
   <div class="row">
     <div class="image-card col-md-4 col-sm-8">
