change avatar styling

--- a/app/assets/stylesheets/components/_card3.scss
+++ b/app/assets/stylesheets/components/_card3.scss
@@ -9,6 +9,11 @@
   margin-top: 20px;
 }
 
+#kid-avatar img {
+ margin-top: 0 !important;
+}
+
+
 .card-trip > img {
   height: 600px !important;
   width: 710px !important;
