--- a/app/views/drawings/index.html.erb
+++ b/app/views/drawings/index.html.erb
@@ -11,7 +11,7 @@
           </p>
         </div>
         <h2 class="card-trip-pricing"><%= drawing.kid.first_name %></h2>
-        <div class="card-trip-user avatar-bordered">
+        <div class="card-trip-user avatar avatar-bordered" id="kid-avatar">
           <%= cl_image_tag drawing.kid.avatar %>
         </div>
       </div>
