--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,14 +1,19 @@
 .avatar-bordered {
   width: 40px;
+  height: 40px;
   object-fit: cover;
   border-radius: 50%;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
+  margin-top: 0 !important;
 }
 
 .avatar {
   object-fit: cover;
   width: 40px;
+  height: 40px;
   border-radius: 50%;
+  margin-top: 0 !important;
 }
+
 
