--- a/app/views/collaborations/index.html.erb
+++ b/app/views/collaborations/index.html.erb
@@ -1,28 +1,25 @@
-<div class="container">
-  <h1>Dream Gallery</h1>
+<div class="container mb-3">
+  <h1>Helena's Collaborations Gallery</h1>
 </div>
-<div class="row">
-  <%= @collaborations.each do |collab| %>
-    <div class="col-4">
-      <div class="card-collab">
-          <%= cl_image_tag collab.drawing.image %>
+<div class="row my-3 p-3">
+  <% @collaborations.each do |collab| %>
+    <div class="col-4 mx-3">
+      <div class="card-collab mx-3 my3">
+        <%= cl_image_tag collab.drawing.image %>
         <div class="card-collab-infos">
           <div>
             <p><%= collab.drawing.name %> by <%= collab.drawing.kid.first_name %></p>
             <p>Created at: <%= collab.created_at %></p>
             <p>Date due: <%= collab.created_at + 7.days %></p>
-
-             <%= simple_form_for (collab) do |f| %>
+            <%= simple_form_for (collab) do |f| %>
               <%= f.input :collab_upload %>
               <%= f.input :collab_upload_cache, as: :hidden %>
               <%= f.submit "Complete Collab!", class:"btn btn-primary my-3" %>
-              <% end %>
-            </div>
+              <%= cl_image_tag collab.creator.avatar, class:"card-collab-user avatar-bordered" %>
+            <% end %>
           </div>
-
-          <img src='https://kitt.lewagon.com/placeholder/users/krokrob' class="card-collab-user avatar-bordered"/>
-          <img src="#" class="card-collab-user avatar-bordered"/>
         </div>
       </div>
     </div>
   <% end %>
+</div>
