--- a/app/views/collaborations/creator_collab.html.erb
+++ b/app/views/collaborations/creator_collab.html.erb
@@ -1,11 +1,13 @@
-<!-- Index for ALL COLLABS -->
+<!-- Index for CREATOR SPECIFIC COLLABS -->
 <div class="container mb-3">
   <h1>Helena's Collaborations Gallery</h1>
 </div>
 <div class="row my-3 p-3">
+
   <% @collaborations.each do |collab| %>
     <div class="col-4 mx-3">
       <div class="card-collab mx-3 my3">
+        <% if collab.creator_id == current_user.id %>
         <%= cl_image_tag collab.drawing.image %>
         <div class="card-collab-infos">
           <div>
@@ -17,6 +19,7 @@
               <%= f.input :collab_upload_cache, as: :hidden %>
               <%= f.submit "Complete Collab!", class:"btn btn-primary my-3" %>
               <%= cl_image_tag collab.creator.avatar, class:"card-collab-user avatar-bordered" %>
+            <% end %>
             <% end %>
           </div>
         </div>
