--- a/app/views/drawings/index.html.erb
+++ b/app/views/drawings/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <h1>Drawing List</h1>
   <% @drawings.each do |drawing| %>
-    <div class="card-trip col-md-6 col-sm-8 col-lg-8">
+    <div class="card-trip col-md-6 col-sm-8 col-lg-8 p-3">
       <%= cl_image_tag drawing.image %>
       <div class="card-trip-infos">
         <div>
