--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
     <p>keeping hope alive.</p>
   </div>
 </div>
-<!-- DreamCoLab Info -->
+<!-- DreamCoLab Register new user -->
 <div class="card-join-community text-center col-sm-8 offset-sm-2">
   <h3>Join our community.</h3>
   <div class="d-flex justify-content-center col-sm-8 offset-sm-2">
@@ -13,12 +13,29 @@
     <%= link_to "I'm a creator", new_creator_path(@creator), class:"button-user" %>
   </div>
 </div>
-<div class="mission-card col-sm-8 offset-sm-2 text-center">
+<!-- Our mission information -->
+<div class="brand-card col-sm-8 offset-sm-2 text-center">
   <h1>our mission.</h1>
   <p>dreamCo lab aims to bring hope, inspiration, and creativity to hospitalized children by connecting them with artists around the world to help bring their dreams to reality. </p>
+  <div class="row">
+    <div class="image-card col-lg-4 col-md-6 col-sm-8">
+      <p><%= image_tag 'childdraw.jpg', class:"image" %></p>
+    </div>
+    <div class="image-card col-lg-4 col-md-6 col-sm-8">
+      <p><%= image_tag 'childhosp1.jpg', class:"image" %></p>
+    </div>
+    <div class="image-card col-lg-4 col-md-6 col-sm-8">
+      <p><%= image_tag 'childhosp2.png', class:"image" %></p>
+    </div>
+  </div>
+</div>
+<!-- How it works section -->
+<div class="brand-card col-sm-8 offset-sm-2 text-center">
+  <h1>how it works.</h1>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi natus dolores ullam quo fugiat magni, magnam molestiae, laborum autem vero quae voluptatum porro, voluptates cum perspiciatis tempore, aliquid deserunt facilis. </p>
 </div>
 <!-- Dream Gallery examples -->
-<div class="gallery-card col-sm-8 offset-sm-2 text-center">
+<div class="brand-card col-sm-8 offset-sm-2 text-center">
   <h1>dream gallery.</h1>
   <p >Our dream gallery is filled with creations and collaborations between dreamers and creators from all over the world! Take a look at some of our latest works.  </p>
   <div class="row">
