--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -5,7 +5,8 @@
   border-radius: 50%;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
-  margin-top: 0 !important;
+  // margin-top: 0 !important;
+  margin-top: 30px;
 }
 
 .avatar {
