--- a/app/assets/stylesheets/pages/_login_signup.scss
+++ b/app/assets/stylesheets/pages/_login_signup.scss
@@ -1,9 +1,11 @@
 .container {
-  border: 2px solid #756c83;
+  border: 4px solid #756c83;
   margin-top: 40px;
   background-color: white;
   padding-left: 0;
-
+}
+.container .image {
+  width: 100%;
 }
 
 .container-login {
@@ -12,6 +14,7 @@
 }
 
 .container img {
+  margin-top: 0;
   margin-left: 0;
   height: 100%;
   width: auto;
@@ -37,5 +40,5 @@
 
 .button-register:hover {
   opacity: 0.8;
-  color: #f38181;
+  color: #b9e1dc;
 }
