--- a/app/views/kids/new.html.erb
+++ b/app/views/kids/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container d-flex justify-content-between">
   <div class="sub-image col-xs-12">
-    <%= image_tag 'childdraw.jpg', class:'image' %>
+    <%= image_tag 'kidhero.jpg', class:'image' %>
   </div>
   <div class='container-login col-xs-12 col-sm-4' >
     <h1>I'm a Dreamer.</h1>
