--- a/app/views/collaborations/_creator_collab.html.erb
+++ b/app/views/collaborations/_creator_collab.html.erb
@@ -1,6 +1,6 @@
 <!-- Index for ALL COLLABS FOR SPECIFIC CREATOR -->
 <div class="container mb-3">
-<h1><%= current_user.name %>'s  Collaborations Gallery</h1>
+<h1><%= current_user.first_name %>'s  Collaborations Gallery</h1>
 </div>
 <div class="row my-3 p-3">
   <% @collaborations.each do |collab| %>
