--- a/app/views/collaborations/index.html.erb
+++ b/app/views/collaborations/index.html.erb
@@ -1,6 +1,6 @@
 <!-- Index for ALL FINISHED COLLABS   -->
 <div class="container mb-3">
-  <h1>DreamCo Gallery</h1>
+  <h1>Dream Gallery</h1>
 </div>
 <div class="row my-3 p-3">
   <% @collaborations.each do |collab| %>
