--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,12 +1,12 @@
 .footer {
   width: 100%;
-  background: #F4F4F4;
+  background: transparent;
   display: flex;
   align-items: center;
   justify-content: space-between;
   height: 100px;
   padding: 0px 50px;
-  color: rgba(0,0,0,0.3);
+  background:rgba(0,0,0,0.2);
   bottom: 0;
   width: 100%;
 
