--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -32,4 +32,22 @@
   border: white 1px solid;
 }
 
+// home only navbar
+
+.navbar-home {
+  position: absolute;
+  right:20px;
+  padding:20px;
+}
+
+.nav-link-home {
+  align-text:right;
+  font-family: 'Cutive Mono', monospace;
+  color: #f38181;
+  margin-right: 20px;
+  margin-top: 20px;
+  font-weight: bold;
+  font-size: 25px;
+}
+
 
