--- a/app/assets/stylesheets/pages/_login_signup.scss
+++ b/app/assets/stylesheets/pages/_login_signup.scss
@@ -1,7 +1,7 @@
 .container {
   border: 4px solid #756c83;
   margin-top: 40px;
-  background-color: white;
+  background-color: #756c83;
   padding-left: 0;
 }
 .container .image {
