--- a/app/views/creators/show.html.erb
+++ b/app/views/creators/show.html.erb
@@ -1,6 +1,6 @@
 <div class='container-profile'>
   <div class="text-center col-lg-8 offset-lg-2 col-md-6 col-sm-8 offset-sm-2">
-    <%= cl_image_tag @creator.avatar, class:"avatar-bordered w-50 h-50 m-3" %>
+    <%= cl_image_tag @creator.avatar, class:"avatar-bordered w-25 h-25 m-3" %>
     <h1><%= @creator.first_name %> <%= @creator.last_name %>, <%= @creator.age %></h2>
     <h2>Location: <%= @creator.city %></h2>
     <%= link_to "Edit Profile", edit_creator_path(@creator), class:"mb-3" %>
@@ -10,18 +10,20 @@
     <p><%= @creator.portfolio_url %></p>
   </div>
 </div>
-<!-- My collabs -->
+<!-- New customized collabs -->
+<h1>My Collaborations</h1>
 <div class="my-art-card text-center col-lg-8 offset-lg-2 col-md-6 col-sm-8 offset-sm-2">
-  <h1>My Collaborations</h1>
-  <div class="row">
-    <div class="image-card col-md-4 col-sm-8">
-      <p><%= image_tag 'collab2.png', class:"image" %></p>
+  <!-- <h1>My Collaborations</h1> -->
+  <% @creator.collaborations.each do |collab| %>
+    <div class="card-row">
+      <div class="card-collab">
+        <%= cl_image_tag collab.drawing.image %>
+        <%= cl_image_tag collab.collab_upload %>
+        <div class="card-collab-infos">
+          <p><%= collab.drawing.name %></p>
+          <p>inspired by <%= collab.drawing.kid.first_name %></p>
+        </div>
+      </div>
     </div>
-    <div class="image-card col-md-4 col-sm-8">
-      <p><%= image_tag 'collab4.png', class:"image" %></p>
-    </div>
-    <div class="image-card col-md-4 col-sm-8">
-      <p><%= image_tag 'collab3.png', class:"image" %></p>
-    </div>
-  </div>
+  <% end %>
 </div>
