--- a/app/views/kids/show.html.erb
+++ b/app/views/kids/show.html.erb
@@ -1,6 +1,6 @@
 <div class='container-profile'>
   <div class="text-center col-lg-8 offset-lg-2 col-md-6 col-sm-8 offset-sm-2">
-    <%= cl_image_tag @kid.avatar, class:"avatar-bordered w-50 h-50 my-3" %>
+    <%= cl_image_tag @kid.avatar, class:"avatar-bordered w-25 h-25 my-3" %>
     <h1><%= @kid.first_name %>, <%= @kid.age %></h2>
     <h2>Location: <%= @kid.city %></h2>
     <%= link_to "Edit Profile", edit_kid_path(@kid), class:"mb-3" %>
@@ -13,33 +13,27 @@
   </div>
 </div>
 <!-- My artwork -->
+<h1>My Drawings</h1>
 <div class="my-art-card text-center col-lg-8 offset-lg-2 col-md-6 col-sm-8 offset-sm-2">
-  <h1>My Drawings</h1>
-  <div class="row">
-    <div class="image-card col-md-4 col-sm-8">
-      <p><%= image_tag 'drawing2.png', class:"image" %></p>
+  <%= @kid.drawings.each do |drawing| %>
+    <div class="row">
+      <div class="card-collab">
+        <%= cl_image_tag drawing.image %>
+        <%= drawing.name %>
+      </div>
+      <p><%= link_to "Add a new drawing!", new_kid_drawing_path(@kid) %></p>
     </div>
-    <div class="image-card col-md-4 col-sm-8">
-      <p><%= image_tag 'drawing4.png', class:"image" %></p>
-    </div>
-    <div class="image-card col-md-4 col-sm-8">
-      <p><%= image_tag 'drawing3.png', class:"image" %></p>
-    </div>
-  </div>
-  <p><%= link_to "Add a new drawing!", new_kid_drawing_path(@kid) %></p>
+  <% end %>
 </div>
 <!-- My collabs -->
+<h1>My Collaborations</h1>
 <div class="my-art-card text-center col-lg-8 offset-lg-2 col-md-6 col-sm-8 offset-sm-2">
-  <h1>My Collaborations</h1>
-  <div class="row">
-    <div class="image-card col-md-4 col-sm-8">
-      <p><%= image_tag 'collab2.png', class:"image" %></p>
+  <%= @kid.drawings.collaboration.each do |collab| %>
+    <div class="card-row">
+      <div class="card-collab">
+        <%= cl_image_tag collab.drawing.image %>
+        <%= cl_image_tag collab.collab_upload %>
+      </div>
     </div>
-    <div class="image-card col-md-4 col-sm-8">
-      <p><%= image_tag 'collab4.png', class:"image" %></p>
-    </div>
-    <div class="image-card col-md-4 col-sm-8">
-      <p><%= image_tag 'collab3.png', class:"image" %></p>
-    </div>
-  </div>
+  <% end %>
 </div>
