when a creator is viewing a kid's profile he cannot add a drawing i.e. add drawing removed for creator

--- a/app/views/kids/show.html.erb
+++ b/app/views/kids/show.html.erb
@@ -28,7 +28,9 @@
       </div>
     <% end %>
   </div>
+  <% if current_user.type == "Kid" %>
   <p><%= link_to "Add a new drawing!", new_kid_drawing_path(@kid) %></p>
+  <% end %>
 
 </div>
 <!-- My collabs -->
