--- a/app/views/collaborations/_creator_collab.html.erb
+++ b/app/views/collaborations/_creator_collab.html.erb
@@ -14,8 +14,8 @@
               <p><%= collab.drawing.name %> by <%= collab.drawing.kid.first_name %></p>
               <p>Created at: <%= collab.created_at.strftime("%d / %m / %Y") %></p>
               <p>Date due: <%= (collab.created_at + 7.days).strftime("%d / %m / %Y") %></p>
-              <%= simple_form_for [current_user, collab] do |f| %>
-                <%= f.input :collab_upload %>
+              <%= simple_form_for [current_user, collab], html: {novalidate: false} do |f| %>
+                <%= f.input :collab_upload, :required => true %>
                 <%= f.input :collab_upload_cache, as: :hidden %>
                 <%= f.submit "Complete Collab!", class:"btn btn-primary my-3" %>
                 <%= cl_image_tag collab.creator.avatar, class:"card-collab-user avatar-bordered" %>
