--- a/app/views/kids/show.html.erb
+++ b/app/views/kids/show.html.erb
@@ -17,9 +17,10 @@
   </div>
 </div>
 <!-- My artwork -->
-<h1>My Drawings</h1>
-<div class="my-art-card text-center col-lg-8 offset-lg-2 col-md-6 col-sm-8 offset-sm-2">
+<div class="title text-center">
   <h1>My Drawings</h1>
+</div>
+<div class="my-art-card text-center col-lg-8 offset-lg-2 col-md-6 col-sm-8 offset-sm-2">
   <div class="row">
     <div class="image-card col-md-4 col-sm-8">
       <% @kid.drawings.each do |drawing| %>
@@ -28,20 +29,18 @@
     </div>
   </div>
   <% if current_user.type == "Kid" %>
-  <p><%= link_to "Add a new drawing!", new_kid_drawing_path(@kid) %></p>
-</div>
-<!-- My collabs -->
-<h1>My Collaborations</h1>
-<div class="my-art-card text-center col-lg-8 offset-lg-2 col-md-6 col-sm-8 offset-sm-2">
-  <h1>My Collaborations</h1>
-  <div class="row">
-    <% @collaborations.each do |collab| %>
-      <% if current_user.id == collab.drawing.kid_id %>
-        <div class="image-card col-md-4 col-sm-8">
-          <p><%= cl_image_tag collab.collab_upload %></p>
-        </div>
-      <% end %>
-    <%end%>
+    <p><%= link_to "Add a new drawing!", new_kid_drawing_path(@kid) %></p>
   </div>
-</div>
-
+  <!-- My collabs -->
+  <h1>My Collaborations</h1>
+  <div class="my-art-card text-center col-lg-8 offset-lg-2 col-md-6 col-sm-8 offset-sm-2">
+    <div class="row">
+      <% @collaborations.each do |collab| %>
+        <% if current_user.id == collab.drawing.kid_id %>
+          <div class="image-card col-md-4 col-sm-8">
+            <p><%= cl_image_tag collab.collab_upload %></p>
+          </div>
+        <% end %>
+      <%end%>
+    </div>
+  </div>
