--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -22,6 +22,9 @@
 
 .navbar #navbarSupportedContent .navbar-nav .nav-item .nav-link {
   color: black;
+  font-family: 'Cutive Mono', monospace;
+  font-weight: bold;
+  font-size: 20px;
 }
 
 .user-image {
