--- a/app/views/creators/show.html.erb
+++ b/app/views/creators/show.html.erb
@@ -11,7 +11,9 @@
   </div>
 </div>
 <!-- New customized collabs -->
-<h1>My Collaborations</h1>
+<div class="title text-center">
+  <h1>My Collaborations</h1>
+</div>
 <div class="my-art-card text-center col-lg-8 offset-lg-2 col-md-6 col-sm-8 offset-sm-2">
   <!-- <h1>My Collaborations</h1> -->
   <% @creator.collaborations.each do |collab| %>
