--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,10 +9,10 @@
     <ul class="navbar-nav mr-auto">
       <% if current_user.present? %>
         <li class="nav-item active">
-          <%= link_to "Home", drawings_path, class: "nav-link" %>
+          <%= link_to "Home |", drawings_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Collaborations", collaborations_path, class: "nav-link" %>
+          <%= link_to "Collaborations |", collaborations_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to "Dream Gallery", dream_gallery_path, class: "nav-link" %>
